--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "last 1 chrome version"
   ],
   "dependencies": {
-    "@popperjs/core": "^2.9.2"
+    "@popperjs/core": "^2.9.2",
+    "chart.js": "^3.4.1"
   }
 }
